tests/liquid/pos/heap-st.js
/*@ foo :: (<l>,<m>)/l |-> {a:{number | true}} * m |-> {a:{number | true}} => void/l |-> {a:{number | true }} */
function foo(p,q) {
    return;
}
