tests/liquid/neg/heap-st01.js
/*@ foo :: (<l>,<m>)/l |-> {a:{number | true}} * m |-> {a:{number | true}} =>
                void/l |-> {a:{number | v = 0}} */
function foo(p,q) {
    return;
}
